JumpScript/tests/baselines/reference/isolatedModulesPlainFile-ES6.errors.txt
tests/cases/compiler/isolatedModulesPlainFile-ES6.jump(1,1): error TS1208: Cannot compile namespaces when the '--isolatedModules' flag is provided.


==== tests/cases/compiler/isolatedModulesPlainFile-ES6.jump (1 errors) ====
    declare function run(a: number): void;
    ~~~~~~~
!!! error TS1208: Cannot compile namespaces when the '--isolatedModules' flag is provided.
    run(1);
    